maps-ui/kubernetes/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dft-street-manager-maps-ui-deployment
spec:
  selector:
    matchLabels:
      app: dft-street-manager-maps-ui
  replicas: 2
  template:
    metadata:
      labels:
        app: dft-street-manager-maps-ui
    spec:
      containers:
      - name: dft-street-manager-maps-ui
        image: <DOCKER_REPO_HOSTNAME>/<DOCKER_PROJECT_ID>/<DOCKER_REPO_NAME>:<DOCKER_TAG>
        ports:
          - containerPort: 3000
        resources:
          limits:
            memory: 512Mi
            cpu: 0.5m
          requests:
            memory: 256Mi
            cpu: 0.25m
      nodeSelector:
        system: "false"
