maps-ui/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dft-street-manager-maps-ui
  name: dft-street-manager-maps-ui-service
spec:
  selector:
    app: dft-street-manager-maps-ui
  ports:
  - port: 80
    targetPort: 3000
