maps-ui/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
  name: dft-street-manager-maps-ui-ingress
spec:
  rules:
    - host: develop.stwrks-dev.net
      http:
        paths:
          - backend:
              serviceName: dft-street-manager-maps-ui-service
              servicePort: 80
            path: /
  tls:
    - hosts:
      - "develop.stwrks-dev.net"
      secretName: dft-street-manager-maps-ui
